--- a/src/assets/sass/pages/_homepage.scss
+++ b/src/assets/sass/pages/_homepage.scss
@@ -157,7 +157,7 @@
 }
 .product-card {
   height: fit-content;
-  padding: 36px 40px 40px;
+  padding: 36px 35px 40px;
   border-radius: 5px;
   text-align: center;
   box-shadow: 0 3px 9px 2px rgba(0, 0, 0, 0.12);
@@ -173,14 +173,16 @@
     padding-bottom: 30px;
   }
   &.best-deal-card {
-    margin-top: -53px;
+    margin-top: -56px;
     position: relative;
     background-image: linear-gradient(white, white), linear-gradient(180deg, #bd8f2f 0%, #f9f1b2 66%, #bd8f2f 100%);
     background-origin: border-box;
     background-clip: padding-box, border-box;
-    border: 6px solid transparent;
+    border: 5px solid transparent;
+    padding-inline: 30px;
     @include breakpoint(max-xl) {
       padding-inline: 11px;
+      margin-top: -53px;
     }
     @include breakpoint(max-lg) {
       margin-top: 0;
@@ -192,17 +194,21 @@
   &.active {
     background-color: #fffef4;
     &.best-deal-card {
+      padding-inline: 35px;
       background: #fffef4;
       border: 0;
+      @include breakpoint(xl) {
+        padding-bottom: 46px;
+      }
       @include breakpoint(max-xl) {
         padding-inline: 17px;
+
       }
       .best-deal {
         border-radius: 5px 5px 0 0;
         background-color: var(--c-base);
-        padding-block: 22px;
+        padding-block: 20px;
         padding-top: 24px;
-        margin-bottom: 30px;
         @include breakpoint(max-xl) {
           padding-top: 15px;
           padding-bottom: 15px;
@@ -232,14 +238,14 @@
   .best-deal {
     background-color: #c49b3f;
     margin-top: -36px;
-    margin-left: -40px;
-    margin-right: -40px;
+    margin-left: -30px;
+    margin-right: -30px;
     padding: 20px 20px;
     display: flex;
     align-items: center;
     justify-content: center;
     gap: 5px;
-    margin-bottom: 23px;
+    margin-bottom: 28px;
     line-height: 1.1;
     @include breakpoint(max-xl) {
       margin-top: -30px;
@@ -268,6 +274,7 @@
     font-size: 26px;
     line-height: 1;
     font-weight: 700;
+    // padding-inline: 5px;
     @include breakpoint(max-xl) {
       font-size: 21px;
     }
@@ -355,8 +362,8 @@
   }
   .selling-out-area {
     background-color: #fff2e0;
-    margin-left: -33px;
-    margin-right: -33px;
+    margin-left: -28px;
+    margin-right: -28px;
     margin-bottom: -34px;
     margin-top: 30px;
     padding: 15px 36px;
